[gd_scene load_steps=4 format=2]

[ext_resource path="res://Images/Microwave_Closed.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Objects/DummyHeater.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 77, 45 )

[node name="DummyHeater" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Menu" type="CanvasLayer" parent="."]
visible = false
scale = Vector2( 1.5, 1.5 )
transform = Transform2D( 1.5, 0, 0, 1.5, 0, 0 )

[node name="PanelContainer" type="PanelContainer" parent="Menu"]
anchor_left = 0.333
anchor_top = 0.333
anchor_right = 0.333
anchor_bottom = 0.333
margin_left = -100.0
margin_top = -100.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 234.0
margin_bottom = 142.0

[node name="TimeLabel" type="Label" parent="Menu/PanelContainer/VBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0
align = 1

[node name="GridContainer" type="GridContainer" parent="Menu/PanelContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 227.0
margin_bottom = 111.0
columns = 3

[node name="1Button" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
margin_right = 72.0
margin_bottom = 20.0
text = "1"
expand_icon = true

[node name="2Button" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
margin_left = 76.0
margin_right = 152.0
margin_bottom = 20.0
text = "2"
expand_icon = true

[node name="3Button" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
margin_left = 156.0
margin_right = 227.0
margin_bottom = 20.0
text = "3"
expand_icon = true

[node name="4Button" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
margin_top = 24.0
margin_right = 72.0
margin_bottom = 44.0
text = "4"
expand_icon = true

[node name="5Button" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
margin_left = 76.0
margin_top = 24.0
margin_right = 152.0
margin_bottom = 44.0
text = "5"
expand_icon = true

[node name="6Button" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
margin_left = 156.0
margin_top = 24.0
margin_right = 227.0
margin_bottom = 44.0
text = "6"
expand_icon = true

[node name="7Button" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
margin_top = 48.0
margin_right = 72.0
margin_bottom = 68.0
text = "7"
expand_icon = true

[node name="8Button" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
margin_left = 76.0
margin_top = 48.0
margin_right = 152.0
margin_bottom = 68.0
text = "8"
expand_icon = true

[node name="9Button" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
margin_left = 156.0
margin_top = 48.0
margin_right = 227.0
margin_bottom = 68.0
text = "9"
expand_icon = true

[node name="ClearButton" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
margin_top = 72.0
margin_right = 72.0
margin_bottom = 92.0
text = "Clear/Exit"
expand_icon = true

[node name="0Button" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
margin_left = 76.0
margin_top = 72.0
margin_right = 152.0
margin_bottom = 92.0
text = "       0       "
expand_icon = true

[node name="BackButton" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
margin_left = 156.0
margin_top = 72.0
margin_right = 227.0
margin_bottom = 92.0
text = "  Delete  "
expand_icon = true

[node name="StartButton" type="Button" parent="Menu/PanelContainer/VBoxContainer"]
margin_top = 115.0
margin_right = 227.0
margin_bottom = 135.0
text = "Start"
expand_icon = true

[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/1Button" to="." method="_on_1Button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/2Button" to="." method="_on_2Button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/3Button" to="." method="_on_3Button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/4Button" to="." method="_on_4Button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/5Button" to="." method="_on_5Button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/6Button" to="." method="_on_6Button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/7Button" to="." method="_on_7Button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/8Button" to="." method="_on_8Button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/9Button" to="." method="_on_9Button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/0Button" to="." method="_on_0Button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
